syntax = "proto3";

package auth;

option go_package = "github.com/yourusername/authservice/api/proto/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc Refresh(RefreshRequest) returns (TokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ValidateSession(ValidateSessionRequest) returns (ValidateSessionResponse);
  rpc RefreshSession(RefreshSessionRequest) returns (RefreshSessionResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string user_agent = 3;
  string ip = 4;
}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string user_id = 1;
  string session_id = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message AuthResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  string session_id = 4;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message LogoutResponse {
  bool success = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
}

message User {
  string id = 1;
  string email = 2;
}

message ValidateSessionRequest {
  string session_id = 1;
}

message ValidateSessionResponse {
  bool valid = 1;
  string user_id = 2;
  string expires_at = 3;
}

message RefreshSessionRequest {
  string session_id = 1;
}

message RefreshSessionResponse {
  string session_id = 1;
  string expires_at = 2;
}
